[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/components/background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/placeholder.png" type="Texture" id=3]
[ext_resource path="res://resume/resume.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/components/theme_button_icon/theme_button_icon.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/components/theme_button/theme_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/shape-01.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 1, 1, 1, 0.627451 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxLine" id=26]
color = Color( 1, 1, 1, 1 )
thickness = 6

[sub_resource type="DynamicFont" id=12]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.67451, 0.517647, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 7
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Resume" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_right = 183
custom_constants/margin_top = 82
custom_constants/margin_left = 183
custom_constants/margin_bottom = 82

[node name="Panel" type="Panel" parent="MarginContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 183.0
margin_top = 82.0
margin_right = 1737.0
margin_bottom = 998.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 197

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_right = 1554.0
margin_bottom = 628.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 244

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 545.0
margin_bottom = 628.0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/AspectRatioContainer"]
margin_top = 9.0
margin_right = 545.0
margin_bottom = 619.0
texture = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/AspectRatioContainer"]
margin_right = 545.0
margin_bottom = 628.0
rect_min_size = Vector2( 545, 628 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 789.0
margin_right = 1554.0
margin_bottom = 628.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 25 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 745.0
margin_bottom = 608.0
custom_constants/separation = 20

[node name="Text" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer"]
margin_right = 725.0
margin_bottom = 456.0
rect_min_size = Vector2( 725, 442 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Lorem Ipsum é simplesmente um texto fictício da indústria tipográfica e de impressão. Lorem Ipsum tem sido o texto fictício padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma cozinha de tipos e embaralhou-a para fazer um livro de espécimes de tipos. Ele sobreviveu não apenas cinco séculos, mas também o salto para a composição eletrônica, permanecendo essencialmente inalterado."
autowrap = true
clip_text = true

[node name="Line" type="HSeparator" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer"]
margin_top = 476.0
margin_right = 725.0
margin_bottom = 480.0
custom_styles/separator = SubResource( 26 )

[node name="Redirect" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_left = 515.0
margin_top = 500.0
margin_right = 725.0
margin_bottom = 588.0
size_flags_horizontal = 8
text = "Ler o texto"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 825.0
margin_right = 1554.0
margin_bottom = 945.0

[node name="Credits" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
visible = false
margin_top = 11.0
margin_right = 193.0
margin_bottom = 84.0
rect_min_size = Vector2( 193, 73 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.603922, 0.388235, 0.721569, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
enabled_focus_mode = 0
text = "Créditos"
__meta__ = {
"_editor_description_": ""
}

[node name="Skip" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 717.0
margin_right = 837.0
selected_color = 1

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer/Redirect" to="." method="_on_Redirect_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/Skip" to="." method="_on_Skip_pressed"]
